--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "@dashotv/components",
-  "module": "index.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "bun build src/index.ts",
+    "build": "bun build src/index.ts --minify --splitting --outdir=dist",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
+  },
+  "exports": {
+    ".": {
+      "import": "./src/index.ts"
+    },
+    "./common": {
+      "import": "./src/common/index.ts"
+    },
+    "./form": {
+      "import": "./src/form/index.ts"
+    },
+    "./layout": {
+      "import": "./src/layout/index.ts"
+    },
+    "./routing": {
+      "import": "./src/routing/index.ts"
+    }
+  },
+  "imports": {
+    "#common": "./src/common/index.ts",
+    "#form": "./src/form/index.ts",
+    "#layout": "./src/layout/index.ts",
+    "#routing": "./src/routing/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -15,11 +39,15 @@
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.6.16",
     "@storybook/testing-library": "^0.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
@@ -29,22 +57,18 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/system": "^5.15.14",
     "@storybook/addon-themes": "^7.6.16",
     "@storybook/react": "^7.6.16",
     "@storybook/react-vite": "^7.6.16",
     "@types/mime": "^4.0.0",
-    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
-    "nats.ws": "^1.22.0",
     "radash": "^12.1.0",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
-    "react-image": "^4.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "react-truncate-inside": "^1.0.3",
-    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.72.0",
     "storybook": "^7.6.16"
   }
