--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/testing-library": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook": "^7.6.16",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
@@ -72,7 +73,6 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.72.0",
-    "storybook": "^7.6.16"
+    "sass": "^1.72.0"
   }
 }
