use rollup for build

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@dashotv/components",
-  "main": "src/index.ts",
-  "module": "src/index.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
   "type": "module",
   "scripts": {
-    "build": "bun build src/index.ts --minify --splitting --outdir=dist",
+    "build": "rollup -c",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -35,15 +35,23 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
-    "@types/bun": "latest",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^7.6.16",
     "@storybook/addon-interactions": "^7.6.16",
     "@storybook/addon-links": "^7.6.16",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.6.16",
     "@storybook/testing-library": "^0.2.2",
+    "@types/bun": "latest",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^4.14.1",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.6.16",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
