--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,18 @@
   "compilerOptions": {
     // Enable latest features
     "lib": [
-      "ESNext"
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
     "target": "ESNext",
+    "outDir": "lib",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
     // Bundler mode
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "noEmit": true,
     // Best practices
@@ -21,11 +24,34 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
+    // ?
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     // dashotv
     "noImplicitAny": false,
-    "baseUrl": "./src"
+    "declaration": true,
+    "esModuleInterop": true,
+    "baseUrl": "./src",
+    "paths": {
+      "common/*": [
+        "common/*"
+      ],
+      "form/*": [
+        "form/*"
+      ],
+      "layout/*": [
+        "layout/*"
+      ],
+      "routing/*": [
+        "routing/*"
+      ]
+    }
   },
   "include": [
-    "./src"
+    "src"
   ],
+  "exclude": [
+    "node_modules",
+    "lib"
+  ]
 }
