--- a/package.json
+++ b/package.json
@@ -13,11 +13,6 @@
     "tests": false
   },
   "devDependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
-    "@mui/system": "^5.15.14",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -44,14 +39,11 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
     "@fontsource/material-icons": "^5.0.16",
     "@fontsource/roboto": "^5.0.12",
     "@types/mime": "^4.0.0",
@@ -62,6 +54,10 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.72.0"
-  }
+    "sass": "^1.72.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {}
 }
