--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@dashotv/components",
+  "version": "0.1.0",
+  "repository": "https://github.com/dashotv/components",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
