--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@dashotv/components",
   "version": "0.1.0",
-  "repository": "https://github.com/dashotv/components",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dashotv/components.git"
+  },
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
