--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dashotv/components",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dashotv/components.git"
@@ -79,5 +79,6 @@
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
